# Crime_dot_Education

./: .gitignore  AGENTS.md  BASE_DATAFRAME_OPTIMIZATION.md  CHART_LIBRARY_EXPANSION.md  CHART_LIBRARY_EXPANSION_PROMPTS.md  CLAUDE.md  EDUCATOR_PORTAL.md  EDUCATOR_PORTAL_PROMPTS.md  LEARNING_MODULES_PROMPTS.md  LICENSE  OPTIMIZATION_PROMPTS.md  README.md  REQUEST_PATH_OPTIMIZATION_PROMPTS.md  ROADMAP.md  STYLEGUIDE.md  UI_OVERHAUL_PROMPTS.md  UV_MIGRATION_PROMPTS.md  VISUALIZATION_EXPANSION.md  VISUALIZATION_EXPANSION_PROMPTS.md  account.py  analytics.py  app.py  cache.py  classroom.py  codebook.xml  data.py  geo.py  lessons.py  make_history.py  moc.py  pyproject.toml  requirements.txt  settings.xml  test.py  test_base_immutability.py  test_map_filter_equivalence.py  util.py  web.py
.claude/: launch.json
deploy/: README.md  deploy.ps1  setup.sh  update-lesson.ps1
lessons/: README.md  designing-a-descriptive-investigation.json  intro-descriptive-stats.json  intro-explorer-basics.json  intro-what-this-data-is.json  race-and-sentencing-disparity.json  small-numbers-big-mistakes.json  the-gender-gap-a-dress-rehearsal.json  the-grid-how-a-sentence-becomes-a-number.json  what-the-data-cant-tell-you.json  what-time-measures.json
perf/: BASELINE.md  benchmark.py  profiling.py
static/css/: base.css  components.css  style.css  tokens.css  views.css
static/geo/: mn-counties-topo.json
static/js/: app.js  compare.js  explore.js  filter.js  geomap.js  otherbucket.js  palette.js  theme.js  visualize.js
templates/: admin.html  admin_class.html  admin_class_assignments.html  admin_class_progress.html  admin_classes.html  admin_classes_compare.html  admin_edit.html  admin_module_answers.html  admin_student_attempts.html  admin_student_delete.html  compare.html  error.html  explore.html  filter.html  filter_boolean.html  filter_boolean_menu.html  guide.html  index.html  info.html  info_menu.html  join.html  layout.html  lesson.html  lesson_catalog.html  lesson_step.html  load.html  login.html  moc.html  moc1.html  new.html  perm.html  perm_menu.html  visualize.html
templates/partials/: column_browser.html  compare_builder.html  compare_results.html  explore_column.html  explore_landing.html  filter_column.html  filter_landing.html  filter_map.html  filter_preview.html  filter_zero.html  lesson_data.html  other_cutoff_slider.html  visualize_view.html  viz_chart_card.html  viz_correlation_matrix.html  viz_info_box.html  viz_result.html
